kube/infrastructure/kite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kite
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt'
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - panel.enderhost.online
      secretName: kite-tls

  rules:
    - host: panel.enderhost.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kite
                port:
                  number: 8080
